# dejavuu

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: benchmark.md  method-fidelity.md  methods.md
docs/experiments/: seeded-root-logitspec.md
results/specbench-danube3-500m-int4genai/: car.csv  divergences.jsonl  manifest.json  measurements.jsonl  responses.jsonl  summary.csv
results/specbench-qwen3-0.6b-int4genai/: car.csv  divergences.jsonl  manifest.json  measurements.jsonl  responses.jsonl  summary.csv
results/speedbench-danube3-500m-int4genai/: car.csv  divergences.jsonl  manifest.json  measurements.jsonl  responses.jsonl  summary.csv
results/speedbench-qwen3-0.6b-int4genai/: car.csv  divergences.jsonl  manifest.json  measurements.jsonl  responses.jsonl  summary.csv
scripts/: bench_all.sh  bench_tree.sh  build_decoder.sh  gap_rank.py  rescore.py
src/dejavuu/: __init__.py  __main__.py  api.py  cli.py  config.py
src/dejavuu/core/: __init__.py  engine.py  sampling.py  tree.py  verifier.py
src/dejavuu/decoders/: __init__.py  hf.py  ort.py  text.py  vlm.py
src/dejavuu/drafters/: __init__.py  adapld.py  anpd.py  asam.py  base.py  cacheback.py  copyspec.py  hybrid.py  logit_spec.py  lookahead.py  ngram_backoff.py  ngram_trie.py  pld_plus.py  prompt_lookup.py  rest.py  sam_decoding.py  stand.py  suffix_decoding.py  suffix_index.py  token_recycling.py
src/dejavuu/eval/: __init__.py  bench.py  config.py  datasets.py  harness.py  mmspec.py  models.py  run_bundle.py  runner.py  scorers.py  specbench.py
src/dejavuu/tools/: artifact.py  build_cacheback_table.py  build_decoder.py  build_genai_chain.py  build_specbench_corpus.py  build_tree_decoder.py  build_vlm_decoder.py  eval_tree.py  specbench_entropy.py
tests/: test_api.py  test_artifact.py  test_benchmark_cli.py  test_benchmark_config.py  test_benchmark_models.py  test_benchmark_runner.py  test_config.py  test_conformance.py  test_copyspec.py  test_datasets.py  test_demos.py  test_device_kv.py  test_drafters.py  test_engine.py  test_engine_edge.py  test_harness.py  test_hf_backend.py  test_hybrid.py  test_loose_verification.py  test_registry.py  test_representation_drafters.py  test_run_bundle.py  test_sampling.py  test_tree.py
